[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "slasher-proxy"
version = "0.1.0"
description = "Experimental proxy service for Avalanche nodes"
readme = "README.md"
authors = [
    {name = "Vadim Bulavintsev", email = "vadim@intersubjective.space"},
    {name = "Bulat Nasrulin", email = "bulat@intersubjective.space"}
]
license = {text = "GPLv2"}
requires-python = "^3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "asyncpg-listen==0.0.7",
    "pydantic-settings==2.7.1",
    "web3>=7.7.0",
    "requests>=2.32.3",
    "pony>=0.7.19",
    "logging>=0.4.9.6",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[project.urls]
Homepage = "https://github.com/intersubjective/slasher-proxy"
Repository = "https://github.com/intersubjective/slasher-proxy"



[tool.poetry]
packages = [{include = "*", from="app"}]



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6"
black = "^23.12"
flake8 = "^7.0"
isort = {extras = ["colors"], version = "^5.13"}
mypy = "^1.8"
mypy-extensions = "^1.0"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"
flake8-black = "^0.3.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-mock = "^3.12.0"
httpx = "^0.26"
tox = "^4.13.0"

[tool.isort]
# https://github.com/timothycrosley/isort/
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.black]
# https://github.com/psf/black
line-length = 88
color = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
pretty = true
show_traceback = true
color_output = true
exclude = [
  '.git',
  '__pycache__',
  '.venv',
  'build',
  'dist'
]

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  #"--doctest-modules",   - this one tries to collect main.py, resulting in crash
  "--doctest-continue-on-failure",
]
